Added back all John Watrous's slides.

--- a/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_1RB2olXRTPUUmLc), which is important to help improve our content offerings and user experience.\n",
     "\n",
-    "In the following video, John Watrous steps you through the content in this lesson on single systems. Alternatively, you can open the [YouTube video](https://youtu.be/3-c4xJa7Flk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/7040o12ksxjed7xlzpfo7j9c7gk3c9e2) for this lesson.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on single systems. Alternatively, you can open the [YouTube video](https://youtu.be/3-c4xJa7Flk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window. [Download the slides](https://ibm.box.com/shared/static/95va6f5vqru3mpsv9p5ivwcyxino4rk7.pdf) for this lesson.\n",
     "\n",
     "<IBMVideo id=\"134056207\" title=\"In this video, John Watrous describes classical and quantum state vectors. He introduces some critical notation for quantum states and operators, including unitary matrices for operations on qubit systems.\"/>\n",
     "\n",
