--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "In the following video, John Watrous steps you through the content in this lesson on quantum phase estimation. Alternatively, you can open the [YouTube video](https://youtu.be/4nT0BTUxhJY?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/jxase3mly99ui1n1fg8pvp6bzymbdgrh) for this lesson.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on quantum phase estimation. Alternatively, you can open the [YouTube video](https://youtu.be/4nT0BTUxhJY?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/jxase3mly99ui1n1fg8pvp6bzymbdgrh.pdf) for this lesson.\n",
     "\n",
     "<IBMVideo id=\"134056217\" title=\"In this video, John Watrous reviews the phase estimation problem and steps through the phase estimation procedure. With this in hand, John moves on to Shor's algorithm.\"/>"
    ]
