--- a/learning/courses/general-formulation-of-quantum-information/general-measurements/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/general-measurements/introduction.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "In the following video, John Watrous steps you through the content in this lesson on general measurements. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=Xi9YTYzQErY&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=13) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/plp9gokjjpvktdsclrex0pg3q2n8f3op) for this lesson.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on general measurements. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=Xi9YTYzQErY&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=13) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/plp9gokjjpvktdsclrex0pg3q2n8f3op.pdf) for this lesson.\n",
     "\n",
     "<IBMVideo id=\"134063423\" title=\"In this video, John Watrous discusses mathematical formulations of measurements. He discusses Naimark's theorem. Finally he describes quantum state discrimination and tomography. \"/>"
    ]
