--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/introduction.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "In the following video, John Watrous steps you through the content in this lesson on quantum channels. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=cMl-xIDSmXI&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=12) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/35dvc00e41kmqmy17cpgmli8zrh04v8k) for this lesson.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on quantum channels. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=cMl-xIDSmXI&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=12) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/35dvc00e41kmqmy17cpgmli8zrh04v8k.pdf) for this lesson.\n",
     "\n",
     "<IBMVideo id=\"134063422\" title=\"In this video, John Watrous discusses the basics of quantum channels. He reviews various representations of quantum channels and discusses the equivalence of these representations.\"/>"
    ]
