--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "In the following video, John Watrous steps you through the content in this lesson on quantum query algorithms. Alternatively, you can open the [YouTube video](https://youtu.be/2wticzHE1vs?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/keh3p0vnrptftpk6o5kabvjewj8psube) for this lesson.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on quantum query algorithms. Alternatively, you can open the [YouTube video](https://youtu.be/2wticzHE1vs?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window. [Download the slides](https://ibm.box.com/s/keh3p0vnrptftpk6o5kabvjewj8psube.pdf) for this lesson.\n",
     "\n",
     "<IBMVideo id=\"134056235\" title=\"In this video, John Watrous discusses the query model of computation and steps through some canonical examples from quantum computing. These include the Deutsch-Jozsa algorithm and Simon's algorithm.\"/>"
    ]
