--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -108,12 +108,8 @@
    "metadata": {},
    "source": [
     "## Get started\n",
-    "<LegacyContent>\n",
-    "Authenticate using your [IBM Quantum Platform API token](https://quantum.cloud.ibm.com/), and select the QESEM Qiskit Function as follows:\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the QESEM Qiskit Function as follows:\n",
-    "</CloudContent>"
+    "\n",
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the QESEM Qiskit Function as follows:\n"
    ]
   },
   {
@@ -238,22 +234,12 @@
    "source": [
     "## Function parameters\n",
     "\n",
-    "<LegacyContent>\n",
-    "| Name |  Type | Description | Required | Default |  Example |\n",
-    "| -----| ------| ------------| -------- | ------- | -------- |\n",
-    "| `pubs` | [EstimatorPubLike](/docs/guides/primitive-input-output) |This is the main input. The `Pub` contains 2-4 elements: a circuit, one or more observables, 0 or a single set of parameter values, and an optional precision. If a precision was not specified, then the `default_precision` from `options` will be used|  Yes|  N/A |  `[(circuit, [obs1,obs2,obs3], parameter_values, 0.03)]`  |\n",
-    "| `backend_name`| string|Name of the backend to use |No | QESEM will get least busy device reported by IBM| `\"ibm_fez\"`|\n",
-    "| `instance` | string|  The hub/group/project to use in that format |  No |  N/A | `“hub1/group1/project1”`  |\n",
-    "| `options` | dictionary |Input options. See **Options** section for more details. | No |  See the **Options** section for details.    |  `{ default_precision = 0.03, \"max_execution_time\" = 3600, \"transpilation_level\" = 0}`  |\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
     "| Name |  Type | Description | Required | Default |  Example |\n",
     "| -----| ------| ------------| -------- | ------- | -------- |\n",
     "| `pubs` | [EstimatorPubLike](/docs/guides/primitive-input-output) |This is the main input. The `Pub` contains 2-4 elements: a circuit, one or more observables, 0 or a single set of parameter values, and an optional precision. If a precision was not specified, then the `default_precision` from `options` will be used|  Yes|  N/A |  `[(circuit, [obs1,obs2,obs3], parameter_values, 0.03)]`  |\n",
     "| `backend_name`| string|Name of the backend to use |No | QESEM will get least busy device reported by IBM| `\"ibm_fez\"`|\n",
     "| `instance` | string|  The cloud resource name of the instance to use in that format |  No |  N/A | `“CRN”`  |\n",
     "| `options` | dictionary |Input options. See **Options** section for more details. | No |  See the **Options** section for details.    |  `{ default_precision = 0.03, \"max_execution_time\" = 3600, \"transpilation_level\" = 0}`  |\n",
-    "</CloudContent>\n",
     "\n",
     "\n",
     "\n",
