--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -13,7 +13,7 @@ the previous step can be executed using either a Sampler or Estimator primitive 
 Qiskit Runtime, initialized locally on your computer or from a cluster or other
 heterogeneous compute environment. These can be executed in a Batch, which allows
 parallel transpilation for classical computational efficiency - or a Session,
-which allows iterative tasks to be implemented efficiently without queuing delays. <CloudContent>Note: Open Plan users cannot submit session jobs.</CloudContent>
+which allows iterative tasks to be implemented efficiently without queuing delays. Note: Open Plan users cannot submit session jobs.
 
 During this step, there is also the option to configure certain error suppression and
 mitigation techniques provided by Qiskit Runtime.
@@ -57,7 +57,6 @@ expectation values of observables corresponding to physical quantities or cost f
 
 ### QPU and platform information
 
-<CloudContent>
 * [Processor types](./processor-types)
 * [QPU information](./qpu-information)
 * [Calibration jobs](./calibration-jobs)
@@ -70,17 +69,4 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Fair-share scheduler](./fair-share-scheduler)
 * [Manage cost](./manage-cost)
 * [View cost](./view-cost)
-</CloudContent>
 
-<LegacyContent>
-* [Processor types](./processor-types)
-* [QPU information](./qpu-information)
-* [Get QPU information with Qiskit](./get-qpu-information)
-* [Native gates and operations](./native-gates)
-* [Dynamic repetition rate execution](./repetition-rate-execution)
-* [Retired QPUs](./retired-qpus)
-* [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations)
-* [Instances](./instances)
-* [Fair-share scheduler](./fair-share-scheduler)
-* [Manage cost](./manage-cost)
-</LegacyContent>
