--- a/docs/guides/common-parameters.ipynb
+++ b/docs/guides/common-parameters.ipynb
@@ -214,12 +214,7 @@
    "id": "d2034dd5-23e5-4473-89b8-aaf4233775c7",
    "metadata": {},
    "source": [
-    "<LegacyContent>\n",
-    "You can use the [`plot_error_map`](/docs/api/qiskit/qiskit.visualization.plot_error_map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams at https://quantum.cloud.ibm.com/computers.\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "You can use the [`plot_error_map`](/docs/api/qiskit/qiskit.visualization.plot_error_map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams on the [Compute resources](https://quantum.cloud.ibm.com/computers) page.\n",
-    "</CloudContent>"
+    "You can use the [`plot_error_map`](/docs/api/qiskit/qiskit.visualization.plot_error_map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams on the [Compute resources](https://quantum.cloud.ibm.com/computers) page."
    ]
   },
   {
