--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -588,20 +588,12 @@
    "metadata": {},
    "source": [
     "## Deploy to IBM Quantum Platform\n",
-    "<LegacyContent>\n",
-    "The previous section created a program to be run remotely. The code in this section uploads that program to Qiskit Serverless.\n",
     "\n",
-    "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API key, which you can find on the [IBM Quantum&reg; Platform dashboard](https://quantum.cloud.ibm.com/), and upload the program.\n",
-    "\n",
-    "You can optionally use `save_account()` to save your credentials (see the [\"Authenticate to the service\" step](/docs/guides/setup-channel#save-account)) in the Set up to use IBM Quantum Platform guide. Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
     "The previous section created a program to be run remotely. The code in this section uploads that program to Qiskit Serverless.\n",
     "\n",
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API key, which you can find on the [IBM Quantum Platform](https://quantum.cloud.ibm.com) dashboard, and upload the program.\n",
     "\n",
-    "You can optionally use `save_account()` to save your credentials (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)\n",
-    "</CloudContent>"
+    "You can optionally use `save_account()` to save your credentials (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)"
    ]
   },
   {
