--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -125,12 +125,7 @@
    "source": [
     "## Get started\n",
     "\n",
-    "<LegacyContent>\n",
-    "Authenticate using your [IBM Quantum Platform API key](https://quantum.cloud.ibm.com/), and select the TEM function as follows:\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the TEM function as follows:\n",
-    "</CloudContent>"
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the TEM function as follows:"
    ]
   },
   {
@@ -265,21 +260,12 @@
     "## Inputs\n",
     "\n",
     "**Parameters**\n",
-    "<LegacyContent>\n",
-    "Name | Type | Description | Required | Default | Example\n",
-    "-- | -- | -- | -- | -- | --\n",
-    "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/docs/guides/primitive-input-output#overview-of-pubs) for more information. If a non-ISA circuit is passed, it will be transpiled with optimal settings. If an ISA circuit is passed, it will not be transpiled, in this case the observable must be defined on the whole QPU. | Yes | N/A | (circuit, observables)\n",
-    "`backend_name` | str | Name of the backend to make the query.| No | If not provided, the least busy backend will be used. | \"ibm_fez\"\n",
-    "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
     "\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
     "Name | Type | Description | Required | Default | Example\n",
     "-- | -- | -- | -- | -- | --\n",
     "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/docs/guides/primitive-input-output#overview-of-pubs) for more information. If a non-ISA circuit is passed, it will be transpiled with optimal settings. If an ISA circuit is passed, it will not be transpiled; in this case, the observable must be defined on the whole QPU. | Yes | N/A | (circuit, observables)\n",
     "`backend_name` | str | Name of the backend to make the query.| No | If not provided, the least-busy backend will be used. | \"ibm_fez\"\n",
     "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
-    "</CloudContent>\n",
     "\n",
     "<Admonition type=\"caution\">\n",
     "  TEM currently has the following limitations:\n",
