--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -61,22 +61,12 @@
     "\n",
     "### Install Qiskit Functions Catalog client\n",
     "\n",
-    "<LegacyContent>\n",
-    "1. To start using Qiskit Functions, install the IBM Qiskit Functions Catalog client:\n",
-    "\n",
-    "    ```\n",
-    "    pip install qiskit-ibm-catalog\n",
-    "    ```\n",
-    "1. Retrieve your API key from the [IBM Quantum account page](https://quantum.cloud.ibm.com/), and activate your Python virtual environment.  See the [installation instructions](/docs/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
     "1. To start using Qiskit Functions, install the IBM Qiskit Functions Catalog client:\n",
     "\n",
     "    ```\n",
     "    pip install qiskit-ibm-catalog\n",
     "    ```\n",
     "1. Retrieve your API key from the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com/), and activate your Python virtual environment.  See the [installation instructions](/docs/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
-    "</CloudContent>\n",
     "\n",
     "    <span id=\"save-account\"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#functions-untrusted) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.)\n",
     "\n",
@@ -109,22 +99,6 @@
    "id": "a00d2d76-dfbe-4a92-be82-8dea393ff12a",
    "metadata": {},
    "source": [
-    "<LegacyContent>\n",
-    "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API key after each use by expiring it on the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com/) (click the refresh button in the API key field) to reduce risk. To initialize the service in this situation, expand the following section to view code you can use:\n",
-    "\n",
-    "    <details>\n",
-    "        <summary>Initialize the service in an untrusted environment</summary>\n",
-    "\n",
-    "    ```python\n",
-    "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
-    "\n",
-    "    # After using the following code, go to your dashboard\n",
-    "    # and expire your API key (click the refresh button in the API key field)\n",
-    "    catalog = QiskitFunctionsCatalog(token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
-    "    ```\n",
-    "    </details>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
     "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API key after each use by deleting it on the [IBM Cloud API keys](https://cloud.ibm.com/iam/apikeys) page to reduce risk. Learn more in the [Managing user API keys](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui) topic. To initialize the service in this situation, expand the following section to view code you can use:\n",
     "\n",
     "    <details>\n",
@@ -136,8 +110,7 @@
     "    # After using the following code, delete your API key on the IBM Cloud API keys page\n",
     "    catalog = QiskitFunctionsCatalog(token=\"<MY_API_KEY>\")\n",
     "    ```\n",
-    "    </details>\n",
-    "</CloudContent>"
+    "    </details>"
    ]
   },
   {
@@ -145,20 +118,11 @@
    "id": "374939e2-54ac-4b72-92df-19a5fe9ec352",
    "metadata": {},
    "source": [
-    "<LegacyContent>\n",
-    "    <Admonition type=\"caution\">\n",
-    "      **Protect your API key!** Never include your key in source code, Python script, or notebook file. When sharing code with others, ensure that your API key is not embedded directly within the Python script. Instead, share the script without the key and provide instructions for securely setting it up.\n",
-    "\n",
-    "      If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by expiring it on the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com/) (click the refresh button in the API key field) to reduce risk.\n",
-    "    </Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
     "    <Admonition type=\"caution\">\n",
     "      **Protect your API key!** Never include your key in source code, Python script, or notebook file. When sharing code with others, ensure that your API key is not embedded directly within the Python script. Instead, share the script without the key and provide instructions for securely setting it up.\n",
     "\n",
     "      If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by deleting it on the [IBM Cloud API keys](https://cloud.ibm.com/iam/apikeys) page to reduce risk. Learn more in the [Managing user API keys](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui) topic.\n",
-    "    </Admonition>\n",
-    "</CloudContent>"
+    "    </Admonition>"
    ]
   },
   {
