--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -126,12 +126,7 @@
     "\n",
     "For classical tasks that can be parallelized, use the `@distribute_task` decorator to define compute requirements needed to perform a task. Start by recalling the `transpile_remote.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic with the following code.\n",
     "\n",
-    "<LegacyContent>\n",
-    "The following code requires that you have already [saved your credentials](/docs/guides/setup-channel#iqp).\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "The following code requires that you have already [saved your credentials](/docs/guides/cloud-setup).\n",
-    "</CloudContent>"
+    "The following code requires that you have already [saved your credentials](/docs/guides/cloud-setup)."
    ]
   },
   {
