--- a/docs/guides/instances.ipynb
+++ b/docs/guides/instances.ipynb
@@ -24,7 +24,6 @@
    "id": "496d6624-8bf1-4e84-aaac-ecfd7e3b58a3",
    "metadata": {},
    "source": [
-    "\n",
     "Access to IBM Quantum Platform services is controlled by the **instances** to which you are assigned. Users can belong to more than one instance at any given time.\n",
     "\n",
     "An instance is a deployment of Qiskit Runtime. You need a different instance for every service plan (such as Open or Standard) you use in every region that you want to use. The account manager and anyone with enough permission can create an instance and define its configuration, such as its allocations, usage limits, quantum computers, and user permissions. Each instance is identified by a unique Cloud Resource Name (CRN).  This CRN can be used when sending workloads from your Qiskit programs.\n",
@@ -125,7 +124,7 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - [Work with access groups](/docs/guides/access-groups)\n",
     "    - [Manage users.](/docs/guides/invite-and-manage-users)\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   }
  ],
