--- a/docs/guides/run-jobs-session.ipynb
+++ b/docs/guides/run-jobs-session.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "<Admonition type=\"caution\">\n",
     "The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/docs/guides/execution-modes#job-mode) or [batch mode](/docs/guides/execution-modes#batch-mode).\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   },
   {
@@ -173,7 +173,7 @@
     "\n",
     "<Admonition type=\"caution\">\n",
     "The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/docs/guides/execution-modes#job-mode) or [batch mode](/docs/guides/execution-modes#batch-mode).\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   },
   {
@@ -252,7 +252,7 @@
     "\n",
     "<Admonition type=\"caution\">\n",
     "The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/docs/guides/execution-modes#job-mode) or [batch mode](/docs/guides/execution-modes#batch-mode).\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   },
   {
@@ -302,7 +302,7 @@
     "\n",
     "<Admonition type=\"caution\">\n",
     "The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/docs/guides/execution-modes#job-mode) or [batch mode](/docs/guides/execution-modes#batch-mode).\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   },
   {
@@ -339,7 +339,7 @@
     "\n",
     "<Admonition type=\"caution\">\n",
     "The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/docs/guides/execution-modes#job-mode) or [batch mode](/docs/guides/execution-modes#batch-mode).\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   },
   {
@@ -400,7 +400,7 @@
     "\n",
     "<Admonition type=\"caution\">\n",
     "The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/docs/guides/execution-modes#job-mode) or [batch mode](/docs/guides/execution-modes#batch-mode).\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   },
   {
