--- a/docs/tutorials/hello-world.ipynb
+++ b/docs/tutorials/hello-world.ipynb
@@ -523,7 +523,7 @@
    "source": [
     "### Step 2. Optimize the problem for execution on quantum hardware\n",
     "\n",
-    "The following code transforms the circuit and observables to match the backend's ISA. It requires that you have already [saved your credentials](/docs/guides/cloud-setup)\n"
+    "The following code transforms the circuit and observables to match the backend's ISA. It requires that you have already [saved your credentials](/docs/guides/cloud-setup)"
    ]
   },
   {
