--- a/docs/guides/primitives-rest-api.ipynb
+++ b/docs/guides/primitives-rest-api.ipynb
@@ -647,7 +647,7 @@
     "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.\n",
     "    - Learn how to transpile locally in the [Transpile](./transpile) section.\n",
     "    - [Migrate to the Qiskit Runtime V2 primitives.](/docs/migration-guides/v2-primitives)\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   }
  ],
