--- a/docs/tutorials/long-range-entanglement.ipynb
+++ b/docs/tutorials/long-range-entanglement.ipynb
@@ -230,7 +230,7 @@
    "source": [
     "#### Set primary parameters\n",
     "\n",
-    "In this section are definitions for some common parameters that you will use later. You'll need to specify these parameters for a particular backend. In order to do so, you will need an account on [IBM Quantum&trade; Platform](https://quantum-computing.ibm.com/). More details on how to initialize your account can be found in the [documentation](/docs/guides/setup-channel#set-up-to-use-ibm-quantum-platform)."
+    "In this section are definitions for some common parameters that you will use later. You'll need to specify these parameters for a particular backend. In order to do so, you will need an account on [IBM Quantum&trade; Platform](https://quantum-computing.ibm.com/). More details on how to initialize your account can be found in the [documentation](/docs/guides/cloud-setup)."
    ]
   },
   {
@@ -2334,14 +2334,6 @@
     "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_5nJZASV7wzDVLF4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae395952",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2024"
    ]
   }
  ],
