--- a/docs/guides/cloud-setup-invited.mdx
+++ b/docs/guides/cloud-setup-invited.mdx
@@ -78,137 +78,9 @@ When an instance CRN or name is passed in, only backends and jobs from that inst
       * Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
       * If you don't save your credentials, you must specify them every time you start a new session.
 
-<span id="cloud-untrusted"></span>
-### 2. Initialize the service (untrusted environment)
-    Follow these instructions to authenticate to IBM Cloud if you are not using a trusted environment.
-    **Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a shared or public computer), change your API key after each use by deleting it on the [API keys page](https://cloud.ibm.com/iam/apikeys) and creating a new one.
-
-    <Admonition type="caution">
-      **Protect your API key!** Never include your key in source code, Python script, or notebook file. When sharing code with others, ensure that your API key is not embedded directly within the Python script. Instead, share the script without the token and provide instructions for securely setting it up.
-
-      If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) topic on IBM Cloud.
+    <Admonition type="note">
+      Follow [these instructions](/docs/guides/cloud-setup-untrusted) to authenticate to IBM Cloud if you are not using a trusted environment. For example, if you are using a public comptuer.
     </Admonition>
-
-    To initialize the service in this situation, use code like the following:
-
-    ```python
-    from qiskit_ibm_runtime import QiskitRuntimeService
-
-    service = QiskitRuntimeService(
-      # Delete your key on the API keys page after entering this code:
-      token="<IBM Cloud API key>",
-      # Optionally specify an instance to use
-      instance="<IBM Cloud CRN or instance name>"
-      )
-    ```
-### 3. Optional: Configure your firewall.
-
-    If necessary, use [this information](/docs/guides/quickstart-steps-org#firewall) to enable access to the IBM Quantum API endpoints.
-
-<span id="iqp-rest-api"></span>
-## Set up to use IBM Quantum Platform with REST API
-
-You can access quantum processors with REST APIs, enabling you to work with QPUs using any programming language or framework.
-
-### 1. Get access
-
-1. If you do not already have a user account, get one at the [IBM Quantum login page.](https://quantum.cloud.ibm.com/login)
-1. Create an API key on the [dashboard.](https://quantum.cloud.ibm.com)
-1. Generate an IBM Cloud Identity and Access Management (IAM) bearer token. This is a short-lived token  used to authenticate requests to the REST API. To generate one, call the [IAM Identity Services API](https://cloud.ibm.com/apidocs/iam-identity-token-api#create-api-key) as shown in the following sample request:
-<Tabs>
-
-   <TabItem value="Curl" label="Curl">
-   ```bash
-   curl -X POST 'https://iam.cloud.ibm.com/identity/token' \
-   -H 'Content-Type: application/x-www-form-urlencoded' \
-   -d 'grant_type=urn:ibm:params:oauth:grant-type:apikey&apikey=MY_APIKEY'
-   ```
-   Expected Response
-   ```text
-   {
-      "access_token": "eyJhbGciOiJIUz......sgrKIi8hdFs",
-      "refresh_token": "SPrXw5tBE3......KBQ+luWQVY=",
-      "token_type": "Bearer",
-      "expires_in": 3600,
-      "expiration": 1473188353
-   }
-   ```
-   </TabItem>
-
-   <TabItem value="Python" label="Python">
-   ```python
-   # Use 'service' to invoke operations.
-   import requests
-   import json
-
-   url = 'https://iam.cloud.ibm.com/identity/token'
-   api_key = 'MY_APIKEY'
-   headers = {
-    'Content-Type': 'application/x-www-form-urlendcoded',
-   }
-   data = f'grant_type=urn:ibm:params:oauth:grant-type:apikey&apikey={api_key}'
-   response = requests.post(url, headers=headers, data=data)
-
-   # Bearer token to authorize requests to the REST API
-   bearer_token = response.json()['access_token']
-   ```
-   </TabItem>
-</Tabs>
-
-### 2. Choose an authentication method
-
-Choose the appropriate authentication method, depending on your working environment:
-
-* [Create an environment variable for your API key (trusted Python environments)](#environment_variable)
-* [Use your API key directly (untrusted environment)](#rest-untrusted)
-
-<span id="environment_variable"></span>
-#### Create an environment variable (trusted environment)
-
-1.  To set the IQP_API_TOKEN environment variable in your system, you can add the following line to your shell profile (for example, .bashrc or .zshrc) or by setting it directly in your terminal:
-
-    ```shell
-    export IQP_API_TOKEN=<your-token>
-    ```
-    When you invoke the environment variable in your code, include `import os`, as in this example:
-
-    ```python
-    import os
-    api_token = os.environ['IQP_API_TOKEN']
-    ```
-
-    Note that when creating an environment variable, your API key is still stored locally in plain text, and should be safeguarded.
-1. Authenticate requests to the Qiskit Runtime REST API by including the CRN and bearer token to the request's headers.
-```bash
-curl -X 'GET' \
-   'https://quantum.cloud.ibm.com/api/v1/usage' \
-   '-H accept: application/json' \
-   '-H authorization: Bearer <BEARER_TOKEN>' \
-   '-H Service-CRN: crn:v1:bluemix:public:quantum-computing:us-east:a/b947c1c5a9378d64aed96696e4d76e8e:a3a7f181-35aa-42c8-94d6-7c8ed6e1a94b::'
-```
-
-<span id="rest-untrusted"></span>
-#### Use your API key directly (untrusted environment)
-
-Follow these steps if you must use an untrusted environment, such as a public computer.
-<Admonition type="caution">
-  When sharing code with others, ensure that your API key is not embedded directly within the Python script. Instead, share the script without the key and provide instructions for securely setting it up.
-
-  If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) topic on IBM Cloud.
-</Admonition>
-
-1. Authenticate requests to the Qiskit Runtime REST API by including the CRN and bearer token to the request's headers.
-
-  ```python
-# Refresh your API key on the dashboard after using the code as follows:
-api_key = "<your-key>"
-  ```
-1. Change your API key after each use by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) instructions on IBM Cloud.
-
-### 3. Optional: Configure your firewall
-
-    If necessary, use [this information](/docs/guides/quickstart-steps-org#firewall) to enable access to the IBM Quantum API endpoints.
-
 
 ## Next steps
 
@@ -216,5 +88,6 @@ api_key = "<your-key>"
   -  [Overview of available plans.](plans-overview)
   -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
   -  Follow the steps in [Hello world](/docs/tutorials/hello-world) to write and run a quantum program.
+  -  [Set up to use IBM Quantum Platform with REST API.](/docs/guides/cloud-setup-rest-api)
   -  Try a [tutorial](/docs/tutorials).
 </Admonition>
