--- a/docs/guides/cloud-setup-invited.mdx
+++ b/docs/guides/cloud-setup-invited.mdx
@@ -32,7 +32,7 @@ Your user account is associated with one or more [instances](./instances) that g
 <span id="access-credentials"></span>
 ### 1. Find your access credentials
     1. Find your API key. From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication.
-    2. Optional: Find your CRN from the Instances section of the dashboard. Click the icon to copy your CRN for the instance you want to use, then save it in a secure location so you can use it to identify the instance.
+    2. Optional: Find the instance you want to use from the [Instances](https://quantum.cloud.ibm.com/instances) page. Click the icon to copy its CRN, then save it in a secure location so you can use it to identify the instance.
 
 <span id="cloud-save"></span>
 ### 2. Initialize the service (trusted environment)
