--- a/docs/guides/cloud-setup-untrusted.mdx
+++ b/docs/guides/cloud-setup-untrusted.mdx
@@ -6,7 +6,7 @@ platform: cloud
 
 {/* cspell:ignore urlendcoded, WQVY */}
 
-# Initialize the service in an uuntrusted environment
+# Initialize the service in an untrusted environment
 
 Follow these instructions if you are working with IBM Cloud or the IBM Qiskit Runtime REST API in an untrusted environment, such as a public computer.
 
