Add chemistry workflow template and make edits to other pages

--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -48,6 +48,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b51e81bf-0bbf-4f64-af1e-87fcb443d997",
+   "metadata": {},
+   "source": [
+    "### Physics workflow\n",
+    "\n",
+    "This template encapsulates a workflow to simulate the time evolution of an initial state against a user defined spin-based Hamiltonian and returns a set of specified expectation values using the [AQC addon](./qiskit-addons-aqc). A demonstration of deploying and running this template can be found as a Jupyter notebook in the [project's directory](https://github.com/qiskit-community/qiskit-function-templates/blob/main/physics/hamiltonian_simulation/deploy_and_run.ipynb).\n",
+    "\n",
+    "Similar to the chemistry workflow it is also divided into several sections:\n",
+    "\n",
+    "1. Input validation\n",
+    "\n",
+    "This section takes as an input the Hamiltonian to simulate, an initial state in the form of a `QuantumCircuit`, a set of observables to estimate expectation values, and a specification of options for the AQC addon. This step validates that all required input data is present and that they are in the correct format. An [`EstimatorV2`](../api/qiskit-ibm-runtime/estimator-v2) instance is created with a default set of error mitigation options.\n",
+    "\n",
+    "2. Mapping\n",
+    "\n",
+    "The input arguments are then used to construct the relevant quantum circuits and operators for the workflow. A target circuit is created and a matrix product state representation of this circuit is found using the AQC addon. Following this, an ansatz circuit is generated and optimized using tensor network methods, producing a final circuit which executes the remainder of the time evolution.\n",
+    "\n",
+    "3. Execution\n",
+    "\n",
+    "Finally, the ansatz circuit is transpiled and executed on a QPU and collects estimates for all of the specified expectation values, which are returned in a serializable format for access by the user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e451f954-1d8f-4687-a7e9-e4b0dfa170f3",
    "metadata": {},
    "source": [
