--- a/docs/guides/stretch.mdx
+++ b/docs/guides/stretch.mdx
@@ -13,7 +13,7 @@ A common use case of `stretch` is to apply dynamical decoupling to an idling qub
 
 For example, we can use `stretch` to apply an XX dynamical decoupling sequence to qubit 1, for the duration of the conditional bloack applied to qubit 0, as illustrated by the following diagram:
 
-![Image illustrating the following circuit](/docs/images/guides/stretch/stretch.png)
+![Image illustrating the following circuit](/docs/images/guides/stretch/stretch.avif)
 
 The corresponding circuit would look like the following. Note that a pair of barriers is needed to define the boundaries of this relative timing.
 
